--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,13 @@
 <!doctype html>
 <html lang="fa" dir="rtl">
-
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>بوکی</title>
 </head>
-
 <body>
-  <div id="root" class="font-main flex flex-col fixed inset-0 h-full w-full bg-stone-100 text-stone-600 leading-normal">
-  </div>
+  <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
-
 </html>
